# DesktopGit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
assets/icons/: LICENSES.md
packaging/: desktopgit.desktop  io.github.desktopgit.metainfo.xml
scripts/: build-appimage.sh  install-linux.sh  install-linuxdeployqt.sh  package-release.sh  uninstall-linux.sh
src/: main.cpp
src/app/: AppController.cpp  AppController.h
src/git/: GitCommandRunner.cpp  GitCommandRunner.h  GitDiffFormatter.cpp  GitDiffFormatter.h  GitRepository.cpp  GitRepository.h  GitStatusFile.h  GitStatusParser.cpp  GitStatusParser.h
src/models/: BranchModel.cpp  BranchModel.h  CommitFileModel.cpp  CommitFileModel.h  CommitHistoryModel.cpp  CommitHistoryModel.h  StashModel.cpp  StashModel.h  StatusFileModel.cpp  StatusFileModel.h
src/ui/: Main.qml
src/ui/components/: AppButton.qml  AppIcon.qml
src/ui/views/: BranchesView.qml  CommitHistoryView.qml  StashView.qml  WorkingTreeView.qml
tests/: TestDesktopGitCore.cpp
